infrastructure/kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: licensemanager
  labels:
    name: licensemanager
    environment: production
